@@ -5,7 +5,8 @@ Changelog
 1.4.10 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Fixed filename in response header for download.
+  [Julian Infanger]
 
 
 1.4.9 (2012-03-12)
